deploy/k8s/policies/deny-auto-sa-token.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyautomountsa
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAutoMountSA
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdenyautomountsa
      violation[{"msg": msg}] {
        not has_field(input.review.object.spec, "automountServiceAccountToken")
        msg := "automountServiceAccountToken must be explicitly set (prefer false)"
      }
      has_field(obj, field) {
        _ = obj[field]
      }
