deploy/k8s/policies/enforce-daemonset-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireDaemonSetResources
metadata:
  name: daemonsets-must-have-limits
spec:
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["DaemonSet"]
    excludedNamespaces: ["kube-system"]
