deploy/k8s/policies/enforce-no-host-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostNamespaces
metadata:
  name: deny-host-namespaces
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    excludedNamespaces: ["unheaded-ebpf", "kube-system"]
